--- a/3강_1_끝말잇기.html
+++ b/3강_1_끝말잇기.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>끝말잇기</title>
+        <title>3장 끝말잇기</title>
     </head>
     <body>
         <div><span id="order">1</span>번째 참가자</div>
@@ -24,28 +24,21 @@
             // 버튼 클릭
             const onClickButton = () => {
                 // 제시어가 없으면 1번째 참가자라고 판단할 수 있다.
-                if(!word){ // 제시어가 비어있는 경우
+                if(!word || word[word.length - 1] === newWord[0]){
                     word = newWord;
                     $word.textContent = word;
 
                     const order = parseInt($order.textContent);
-                    $order.textContent = order + 1;
-                } else { // 제시어가 비어있지 않은 경우
-                    if(word[word.length - 1] === newWord[0]){ // 올바른가
-                        word = newWord;
-                        $word.textContent = word;
-                        
-                        const order = parseInt($order.textContent);
-                        if(order + 1 > number){
-                            $order.textContent = 1;
-                        } else {
-                            $order.textContent = order + 1;
-                        }
-                    } else { // 올바르지 않은가
-
+                    if(order + 1 > number){
+                        $order.textContent = 1;
+                    } else {
+                        $order.textContent = order + 1;
                     }
+                } else { // 제시어가 비어있지 않은 경우
+                    alert('올바르지 않은 단어입니다.');
                 }
-                $input.value = '';
+                $input.value = ''; // 입력창 비움
+                $input.focus(); // 커서를 둠
             };
 
             const onInput = (event) => {
