자바스크립트 7강 - 타이머 사용하기(setInterval)  진행중

--- a/6장_1_로또_추첨기.html
+++ b/6장_1_로또_추첨기.html
@@ -55,10 +55,10 @@
             $target.appendChild($ball);
         };
 
-        for(let i = 0; i < 6; i++){
+        for(let i = 0; i < winBalls.length; i++){
             setTimeout(() => {
                 showBall(winBalls[i], $result);
-            }, (i+1)*1000);
+            }, (i + 1) * 1000);
         }
 
         setTimeout(() => {
