자바스크립트 8강 - 클릭해서 화면 전환하기  까지 진행

--- a/7장/7장_2_5판3선승제.html
+++ b/7장/7장_2_5판3선승제.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>7장 가위바위보</title>
+        <title>7장 5판3선승제</title>
         <style>
             #computer {
                 width: 142px;
@@ -10,13 +10,13 @@
         </style>
     </head>
     <body>
-        <div id="computer"></div> <!--컴퓨터의 가위바위보 이미지-->
+        <div id="computer"></div>
         <div>
             <button id="scissors" class="btn">가위</button>
             <button id="rock" class="btn">바위</button>
             <button id="paper" class="btn">보</button>
         </div>
-        <div id="score">0</div> <!--점수표-->
+        <div id="score">0</div>
         <script>
             const $computer = document.querySelector('#computer');
             const $score = document.querySelector('#score');
@@ -25,29 +25,26 @@
             const $paper = document.querySelector('#paper');
 
             const IMG_URL = './rsp.png';
-            $computer.style.background = `url(${IMG_URL}) 0 0`; // 이미지의 가로 위치와 세로 위치
-            $computer.style.backgroundSize = 'auto 200px'; // 이미지의 가로 너비와 세로 너비
-            // auto : 비율을 유지하면서 사이즈가 정해짐
+            $computer.style.background = `url(${IMG_URL}) 0 0`;
+            $computer.style.backgroundSize = 'auto 200px';
 
-            const rspX = { // 가위바위보의 x 좌표
-                scissors : '0', // 가위
-                rock : '-220px', // 바위
-                papaer : '-440px', // 보
+            const rspX = {
+                scissors : '0',
+                rock : '-220px',
+                papaer : '-440px',
             };
 
             let computerChoice = 'scissors';
             const changeComputerHand = () => {
-                if(computerChoice === 'scissors') { // 가위
-                    computerChoice = 'rock'; // 바위로 바꾼다
-                } else if(computerChoice === 'rock') { // 바위
-                    computerChoice = 'papaer'; // 보로 바꾼다
-                } else if(computerChoice === 'papaer') { // 보
-                    computerChoice = 'scissors';  // 가위로 바꾼다
+                if(computerChoice === 'scissors') {
+                    computerChoice = 'rock';
+                } else if(computerChoice === 'rock') {
+                    computerChoice = 'papaer';
+                } else if(computerChoice === 'papaer') {
+                    computerChoice = 'scissors';
                 }
                 $computer.style.background = `url(${IMG_URL}) ${rspX[computerChoice]} 0`;
                 $computer.style.backgroundSize = 'auto 200px';
-                // background 를 변경할 때는 backgroundSize도 한번 더 작성해야 문제X
-                // 작성하지 않으면 backgroundSize가 리셋됨
             };
             let intervalId = setInterval(changeComputerHand, 50);
 
@@ -58,13 +55,13 @@
             };
 
             let clickable = true;
-            let score = 0; // 점수
+            let myScoreNum = 0;
+            let computerScoreNum = 0;
             const clickButton = () => {
                 if(clickable){
-                    clearInterval(intervalId); // 가위바위버 버튼을 누르면 타이머 멈춤
+                    clearInterval(intervalId);
                     clickable = false;
 
-                    // 점수 계산 및 화면 표시
                     const myChoice = event.target.textContent === '바위'
                         ? 'rock'
                         : event.target.textContent === '가위'
@@ -74,29 +71,31 @@
                     const computerScore = scoreTable[computerChoice];
                     const diff = myScore - computerScore;
 
-                    // diff === '고양이' || diff === '사자' || diff === '강아지' || diff === '거북이'
-                    // 위 코드를 아래와 같이 줄일 수 있다
-                    // ['고양이', '사자', '강아지', '거북이'].includes(diff)
-
-                    // 2, -1은 승리 조건, -2, 1은 패배 조건
                     let message = '';
-                    if([2, -1].includes(diff)){ // 가위바위보 규칙
-                        score += 1;
+                    if([2, -1].includes(diff)){
+                        myScoreNum += 1;
+                        if(myScoreNum === 3){
+                            message = '당신이 승리했습니다.';
+                            $score.textContent = `${message} ${myScoreNum}승 ${computerScoreNum}패`;
+                            return;
+                        }
                         message = '승리';
                     } else if ([-2, 1].includes(diff)) {
-                        score -= 1;
+                        computerScoreNum += 1;
+                        if(computerScoreNum === 3){
+                            message = '당신이 패배했습니다.';
+                            $score.textContent = `${message} ${myScoreNum}승 ${computerScoreNum}패`;
+                            return;
+                        }
                         message = '패배';
                     } else {
                         message = '무승부';
                     }
-                    $score.textContent = `${message} 총 ${score}점`;
+                    $score.textContent = `${message} ${myScoreNum}승 ${computerScoreNum}패`;
                     
                     setTimeout(() => {
                         clickable = true;
-                        // 버튼을 연속으로 클릭하면 이미지가 빨라지고 멈추지 않는 문제
-                        // setTimeout이 비동기이기 때문에, 만일 5번 연속으로 클릭하면
-                        // intervalId에 5번째 intervalId만 들어가게됨
-                        clearInterval(intervalId); // 위 문제를 해결하기 위함 (1초 후에 직전 intervalId를 제거)
+                        clearInterval(intervalId);
                         intervalId = setInterval(changeComputerHand, 50);
                     }, 1000);
                 }
