자바스크립트 9강 - 부모자식 관계, 유사배열, every, some, flat  진행중

--- a/9장_1_틱택토.html
+++ b/9장_1_틱택토.html
@@ -18,12 +18,104 @@
     </head>
     <body>
         <script>
-            const data = [];
-            for(let i = 0; i < 3; i++){
-                data.push([]);
-            }
+            // 구조분해 할당
+            // 배열이나 객체의 속성을 해체하여 그 값을 개별 변수에 담을 수 있다.
+            const { body } = document;
+
             const $table = document.createElement('table');
-            document.body.append($table);
+            const $result = document.createElement('div');
+            const rows = [];
+            let turn = 'O';
+
+            const checkWinner = (target) => { // target -> td 태그
+                // 칸을 클릭했을 때, 몇번째 줄 몇번째 칸인지
+                let rowIndex = target.parentNode.rowIndex; // tr의 rowIndex
+                const cellIndex = target.cellIndex; // td의 cellIndex
+                // parentNode : 태그의 부모 태그를 가져옴
+
+                // 세 칸 다 채워졌는지
+                let hasWinner = false;
+
+                // 가로줄 검사
+                if (
+                    rows[rowIndex][0].textContent === turn &&
+                    rows[rowIndex][1].textContent === turn &&
+                    rows[rowIndex][2].textContent === turn
+                ){
+                    hasWinner = true;
+                }
+
+                // 세로줄 검사
+                if (
+                    rows[0][cellIndex].textContent === turn &&
+                    rows[1][cellIndex].textContent === turn &&
+                    rows[2][cellIndex].textContent === turn
+                ){
+                    hasWinner = true;
+                }
+
+                // 대각선 검사
+                if (
+                    rows[0][0].textContent === turn &&
+                    rows[1][1].textContent === turn &&
+                    rows[2][2].textContent === turn
+                ){
+                    hasWinner = true;
+                }
+                if (
+                    rows[0][2].textContent === turn &&
+                    rows[1][1].textContent === turn &&
+                    rows[2][0].textContent === turn
+                ){
+                    hasWinner = true;
+                }
+
+                return hasWinner;
+            }
+
+            const callback = (event) => {
+                // 칸에 글자가 있는지
+                if(event.target.textContent) return;
+                event.target.textContent = turn;
+
+                //승부 판단하기
+                if(checkWinner(event.target)){
+                    // 승자가 있으면
+                    $result.textContent = `${turn}님이 승리!`;
+                    $table.removeEventListener('click', callback);
+                    return;
+                }
+                
+                // 승자가 없으면
+                let draw = true;
+                rows.forEach((row) => {
+                    row.forEach((cell) => {
+                        if(!cell.textContent) { // 한칸이라도 비어있으면
+                            draw = false; // 무승부가 아니다
+                        }
+                    });
+                });
+                if(draw){
+                    $result.textContent = '무승부';
+                    return;
+                }
+                turn = (turn === 'X' ? 'O' : 'X');
+            };
+            
+            for(let i = 1; i <= 3; i++){
+                const $tr = document.createElement('tr');
+                const cells = [];
+                for(let j = 1; j <= 3; j++){
+                    const $td = document.createElement('td');
+                    cells.push($td);
+                    $tr.appendChild($td);
+                }
+                rows.push(cells);
+                $table.appendChild($tr);
+            }
+            $table.addEventListener('click', callback);
+            body.append($table);
+            body.append($result);
         </script>
     </body>
 </html>
