자바스크립트 10강 - 서로 공격하기(this, 클래스가 필요한 이유) 까지 진행

--- a/10강_1_텍스트_RPG.html
+++ b/10강_1_텍스트_RPG.html
@@ -56,7 +56,32 @@
             const $monsterAtt = document.querySelector('#monster-att');
             const $message = document.querySelector('#message');
 
-            const hero = {};
+            const hero = { // hero 객체
+                name: '',
+                lev: 1,
+                maxHp: 100,
+                hp: 100,
+                xp: 0,
+                att: 10,
+                attck(monster){
+                    monster.hp -= this.att;
+                    this.hp -= monster.att;
+                },
+                heal(monster){
+                    this.hp += 20;
+                    this.hp -= monster.att;
+                },
+                // 기본적으로 this는 window를 가리킴
+                // window : 브라우저 전체를 담당하는 객체
+                // '객체.메서드'에서 this는 객체를 가리킴
+            };
+            let monster = null;
+            const monsterList = [
+                { name: '슬라임', hp: 25, att: 10, xp: 10 },
+                { name: '스켈레톤', hp: 50, att: 15, xp: 20 },
+                { name: '마왕', hp: 150, att: 35, xp: 50 },
+            ];
+
             $startScreen.addEventListener('submit', (event) => {
                 event.preventDefault(); // 이벤트의 기본 동작을 실행하지 않도록 함
                 const name = event.target['name-input'].value;
@@ -64,6 +89,59 @@
                 $startScreen.style.display = 'none';
                 $gameMenu.style.display = 'block';
                 $heroName.textContent = name;
+
+                $heroLevel.textContent = `${hero.lev}Lev`;
+                $heroHp.textContent = `HP: ${hero.hp}/${hero.maxHp}`;
+                $heroXp.textContent = `XP: ${hero.xp}/${15 * hero.lev}`; // 최대 경험치는 현재 레벨 * 15
+                $heroAtt.textContent = `ATT: ${hero.att}`;
+                hero.name = name;
+            });
+
+            $gameMenu.addEventListener('submit', (event) => {
+                event.preventDefault();
+                const input = event.target['menu-input'].value;
+                if(input === '1'){ // input의 값은 텍스트
+                    // 모험
+                    $gameMenu.style.display = 'none';
+                    $battleMenu.style.display = 'block';
+                    monster = JSON.parse( // 깊은 복사
+                        JSON.stringify(monsterList[Math.floor(Math.random() * monsterList.length)])
+                    );
+                    // 참조 : 값을 바꾸면 참조한 값도 바뀐다
+                    // 얕은 복사 : 객체가 아닌 원시값은 복사, 객체는 참조
+                    // ㄴ 객체가 들어있지 않으면 복사라고 봐도 무방. 객체가 들어있어야 깊은 복사 사용.
+                    // 깊은 복사 : 객체의 참조마저 복사한다
+
+                    // 간단한 객체는 JSON.parse(JSON.stringify(객체))를 사용해도 되지만,
+                    // 성능도 느리고 함수나 Math, Date 같은 객체를 복사할 수 없다.
+                    // 따라서 실무에서는  lodash 같은 라이브러리를 사용한다.
+
+                    monster.maxHp = monster.hp;
+                    $monsterName.textContent = monster.name;
+                    $monsterHp.textContent = `HP: ${monster.hp}/${monster.maxHp}`;
+                    $monsterAtt.textContent = `ATT: ${monster.att}`;
+                } else if (input === '2'){
+                    // 휴식
+
+                } else if (input === '3'){
+                    // 종료
+
+                }
+            });
+
+            $battleMenu.addEventListener('submit', (event) => {
+                event.preventDefault();
+                const input = event.target['battle-input'].value;
+                if(input === '1'){ // 공격
+                    hero.attck(monster);
+                    $heroHp.textContent = `HP: ${hero.hp}/${hero.maxHp}`;
+                    $monsterHp.textContent = `HP: ${monster.hp}/${monster.maxHp}`;
+                    $message.textContent = `${hero.att}의 데미지를 주고, ${monster.att}의 데미지를 받았다.`;
+                } else if (input === '2'){ // 회복
+
+                } else if (input === '3'){ // 도망
+
+                }
             });
         </script>
     </body>
